midground-faint{er,est} are no longer transparent. Increases legibility of Mermaid arrows.

--- a/quartz/styles/colors.scss
+++ b/quartz/styles/colors.scss
@@ -66,8 +66,8 @@
 }
 
 :root {
-  --midground-fainter: color-mix(in srgb, transparent 70%, var(--midground-faint));
-  --midground-faintest: color-mix(in srgb, transparent 90%, var(--midground-faint));
+  --midground-fainter: color-mix(in srgb, var(--background) 70%, var(--midground-faint));
+  --midground-faintest: color-mix(in srgb, var(--background) 90%, var(--midground-faint));
   --color-link: light-dark(
     color-mix(in srgb, var(--secondary) 30%, var(--foreground)),
     var(--secondary)
